fix(home): :adhesive_bandage: fix gap in shortcuts menu

--- a/src/app/home/shortcuts/item/item.component.scss
+++ b/src/app/home/shortcuts/item/item.component.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: .5rem;
+  gap: .25rem;
   aspect-ratio: 1 / 1;
   place-items: center;
   height: 6rem;
