--- a/src/app/home/shortcuts/shortcuts.component.scss
+++ b/src/app/home/shortcuts/shortcuts.component.scss
@@ -4,7 +4,6 @@ mat-card-content{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   place-items: center;
-  gap: 1rem;
 }
 
 mat-card{
